Show notification marker for newly opened tab in the out of the viewport correctly on Linux

--- a/skin/classic/treestyletab/ui.css
+++ b/skin/classic/treestyletab/ui.css
@@ -310,16 +310,22 @@ tabbrowser[treestyletab-tabbar-position="bottom"]
   > .scrollbutton-down[treestyletab-notifybgtab-phase] {
 	background: -moz-linear-gradient(-90deg, rgba(255,255,255,0), Highlight);
 	border: 0 none;
+	bottom: 0;
 	box-shadow: none;
 	-moz-box-shadow: none;
 	height: 2em;
+	left: 0;
 	margin-top: -2em;
 	visibility: visible;
 	opacity: 0;
 	pointer-events: none;
+	position: relative;
+	right: 0;
+	top: 0;
 	transition: 1s opacity ease-out;
 	transition: 1s opacity ease-out;
 	user-focus: ignore;
+	z-index: 99999;
 	-moz-user-focus: ignore;
 }
 
